--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,35 +1,11 @@
 <div class="nav">
   <div class="navbar">
     <ul>
-      {{#if isWeapons}}
-        <li class="active"><a href="/weapons">Оружие</a></li>
-      {{else}}
-        <li><a href="/weapons">Оружие</a></li>
-      {{/if}}
-
-      {{#if isHats}}
-        <li class="active"><a href="/hats">Головные уборы</a></li>
-      {{else}}              
-        <li><a href="/hats">Головные уборы</a></li>
-      {{/if}}
-
-      {{#if isOuterwear}}
-        <li class="active"><a href="/outerwear">Верхняя одежда</a></li>
-      {{else}}              
-        <li><a href="/outerwear">Верхняя одежда</a></li>
-      {{/if}}
-
-      {{#if isGloves}}
-        <li class="active"><a href="/gloves">Перчатки</a></li>
-      {{else}}              
-        <li><a href="/gloves">Перчатки</a></li>
-      {{/if}}
-
-      {{#if isPants}}
-        <li class="active"><a href="/pants">Брюки</a></li>
-      {{else}}              
-        <li><a href="/pants">Брюки</a></li>
-      {{/if}}
+      <li><a href="/categories/weapons">Оружие</a></li>
+      <li><a href="/categories/hats">Головные уборы</a></li>
+      <li><a href="/categories/outerwear">Верхняя одежда</a></li>
+      <li><a href="/categories/gloves">Перчатки</a></li>
+      <li><a href="/categories/pants">Брюки</a></li>
 
       {{#if isFAQ}}
         <li class="active"><a href="/faq">FAQ</a></li>
