--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,17 @@
 <h1>Main page</h1>
+
+<div class="home-tabs">
+  <div class="home-tab">
+    <img src="/public/img/tab2.jpg" alt="second tab">
+  </div>
+  <div class="home-tab">
+    <img src="/public/img/tab1.jpg" alt="first tab">
+  </div>
+  <div class="switchers">
+    <ol class="tab tab-active"></ol>
+    <ol class="tab"></ol>
+  </div>
+</div>
+<div class="phrase">
+  <h2>May the good blood guide your way</h2>
+</div>
