--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,8 @@ body {
   max-height: 100px;
   text-align: center;
   border-bottom: 2px solid white;
+  background-color: black;
+  background-color:rgba(0, 0, 0, 0.5);
 }
 
 .upper-header img {
@@ -30,6 +32,7 @@ body {
   font-size: 15px;
   margin-top: 20px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .lower-header .nav .navbar {
@@ -263,3 +266,124 @@ body {
   width: 80px;
   height: 80px;
 }
+
+/* category */
+
+.category {
+  box-sizing: border-box;
+  width: 100%;
+  height: auto;
+  background-color: rgba(255, 255, 255, 0.95);
+  padding-top: 50px;
+  padding-bottom: 70px;
+}
+
+.category h1 {
+  text-transform: capitalize;
+  font-weight: 600;
+  text-align: center;
+  font-size: 30px;
+}
+
+.category .product-list {
+  margin: 0 7%;
+  margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.category .product {
+  position: relative;
+  width: 385px;
+  height: 480px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.category .product .product-cover {
+  width: 385px;
+  height: 400px;
+  background-color: #fff;
+  border-radius: 30px;
+  text-align: center;
+  line-height: 400px;
+}
+
+.category .product .product-cover img {
+  width: 300px;
+  height: auto;
+}
+
+.category .product .product-title {
+  width: 385px;
+  height: 60px;
+  margin-top: 15px;
+  background-color: #fff;
+  border-radius: 30px;
+  text-align: center;
+  line-height: 60px;
+  font-weight: 500;
+  font-size: 25px;
+}
+
+.category .product .product-price {
+  position: relative;
+  position: absolute;
+  top: 0;
+  width: 170px;
+  height: 50px;
+  background-color: black;
+  border-radius: 30px 0px 30px 0px;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
+  font-weight: 400;
+  font-size: 25px;
+}
+
+.category .product .product-price span img {
+  position: absolute;
+  top: 0;
+  width: 40px;
+  height: auto;
+}
+
+.category .product .more {
+  /* border: 1px solid black; */
+  display: none;
+  position: absolute;
+  top: 35%;
+  left: 20%;
+  width: 220px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 30px;
+  text-align: center;
+  line-height: 50px;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.category .product .more span {
+  margin-left: 5px;
+}
+
+
+.category .product:hover .product-cover {
+  background-color: black;
+  opacity: .5;
+  transition: 0.5s;
+}
+
+.category .product:hover .product-title {
+  background-color: #000;
+  color: #fff;
+  transition: 0.5s;
+}
+
+.category .product:hover .more {
+  display: block;
+  transition: 0.5s;
+}
+
