Added multer functionality (for 1 image on product)

--- a/views/category.hbs
+++ b/views/category.hbs
@@ -6,7 +6,7 @@
       {{#each products}}
         <div class="product">
           <div class="product-cover">
-            <img src="" alt="{{title}}">
+            <img src="/{{imageUrl}}" alt="{{title}}">
           </div>
           <div class="product-title">{{title}}</div>
           <div class="product-price">{{price}}<span><img src="/public/img/bloodechoes.png" alt="bloodechoes"></span></div>
