--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,6 +1,6 @@
 <h1>Добавить новый продукт</h1>
 
-<form action="/add" method="post">
+<form action="/add" method="post" enctype="multipart/form-data">
   <div>
     <div class="input-field col s6">
       <input id="title" name="title" type="text" class="validate" required>
@@ -29,7 +29,7 @@
     <div class="file-field input-field col s6">
       <div class="btn">
         <span>Файл</span>
-        <input id="imageUrl" name="imageUrl" type="file" multiple>
+        <input id="image" name="image" type="file">
       </div>
       <div class="file-path-wrapper">
         <input class="file-path validate" type="text">
