Add edit functionality
Will have to add remove old product image if image edited

--- a/views/category.hbs
+++ b/views/category.hbs
@@ -14,8 +14,8 @@
           <div class="more">Подробнеe <span>&#8640;</span></div>
         </a>
         <div class="edit_delete">
-          <button class="product-edit"><i class="far fa-edit"></i></button>
-          <button class="product-delete"><i class="far fa-trash-alt"></i></button>
+          <a href="/product/{{id}}/edit?allow=true"><button class="product-edit"><i class="far fa-edit"></i></button></a>
+          <a href="/"><button class="product-delete"><i class="far fa-trash-alt"></i></button></a>
         </div>
       </div>
     {{/each}}
