--- a/views/product-edit.hbs
+++ b/views/product-edit.hbs
@@ -1,9 +1,9 @@
-<h4>Добавить новый продукт</h4>
+<h4>Редактировать продукт: '{{product.title}}'</h4>
 
-<form action="/add" method="post" enctype="multipart/form-data">
+<form action="/product/edit" method="post" enctype="multipart/form-data">
   <div>
     <div class="input-field col s6">
-      <input id="title" name="title" type="text" class="validate" required>
+      <input id="title" name="title" type="text" class="validate" required value="{{product.title}}">
       <label for="title">Название</label>
       <span class="helper-text" data-error="Введите название"></span>
     </div>
@@ -11,7 +11,7 @@
     {{#if categories}}
     <div class="input-field col s6">
       <select name="categoryId">
-        <option value="" disabled selected>Выберите категорию</option>
+        <option value="{{@root.product.categoryId}}" disabled selected>{{category.title}}</option>
         {{#each categories}}
           <option value="{{id}}">{{title}}</option>
         {{/each}}
@@ -21,7 +21,7 @@
     {{/if}}
 
     <div class="input-field col s6">
-      <input id="price" name="price" type="number" class="validate" required>
+      <input id="price" name="price" type="number" class="validate" required value="{{product.price}}">
       <label for="price">Стоимость</label>
       <span class="helper-text" data-error="Введите стоимость"></span>
     </div>
@@ -32,14 +32,16 @@
         <input id="image" name="image" type="file">
       </div>
       <div class="file-path-wrapper">
-        <input class="file-path validate" type="text">
+        <input class="file-path validate" type="text" value="{{product.imageUrl}}">
       </div>
     </div>
 
     <div class="input-field col s6">
-      <textarea id="description" name="description" class="materialize-textarea"></textarea>
+      <textarea id="description" name="description" class="materialize-textarea">{{product.description}}</textarea>
       <label for="description">Описание</label>
     </div>
-    <button type="submit" class="btn">Добавить</button>
+
+    <input type="hidden" name="id" value="{{product.id}}">
+    <button type="submit" class="btn">Редактировать</button>
   </div>
 </form>
