Add remove item functionality
! Не добавляется продукт, если нет фото

--- a/views/product-edit.hbs
+++ b/views/product-edit.hbs
@@ -1,6 +1,6 @@
 <h4>Редактировать продукт: '{{product.title}}'</h4>
 
-<form action="/product/edit" method="post" enctype="multipart/form-data">
+<form action="/products/edit" method="post" enctype="multipart/form-data">
   <div>
     <div class="input-field col s6">
       <input id="title" name="title" type="text" class="validate" required value="{{product.title}}">
