--- a/views/category.hbs
+++ b/views/category.hbs
@@ -5,7 +5,7 @@
     {{#if products.length}}
     {{#each products}}
       <div class="product">
-        <a href="/product/{{id}}">
+        <a href="/products/{{id}}">
           <div class="product-cover">
             <img src="/{{imageUrl}}" alt="{{title}}">
           </div>
@@ -14,8 +14,11 @@
           <div class="more">Подробнеe <span>&#8640;</span></div>
         </a>
         <div class="edit_delete">
-          <a href="/product/{{id}}/edit?allow=true"><button class="product-edit"><i class="far fa-edit"></i></button></a>
-          <a href="/"><button class="product-delete"><i class="far fa-trash-alt"></i></button></a>
+          <a href="/products/{{id}}/edit?allow=true"><button class="product-edit"><i class="far fa-edit"></i></button></a>
+          <form action="/products/{{id}}/remove" method="POST">
+            <input type="hidden" name="id" value="{{product.id}}">
+            <button class="product-delete"><i class="far fa-trash-alt"></i></button>
+          </form>
         </div>
       </div>
     {{/each}}
