--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -40,4 +40,35 @@
     <h4>Автор вдохновлялся магазином вещей <a href="https://jolybell.com/">JolyBell.com</a></h4>
   </div>
 </div>
+
+<div class="cart-modal">
+  <div class="continue">
+    <img src="/public/img/leftarrow.png" alt="continue">
+    <p>Продолжить покупки</p>
+  </div>
+  <div class="purchases">
+    <p>Мои покупки</p>
+    <div class="purchases-list"></div>
+  </div>
+  <div class="promotional">
+    <p>Промокод</p>
+    <input type="text">
+    <button>Применить</button>
+  </div>
+  <hr>
+  <div class="cart-info">
+    <div class="products-cost">
+      <p>Общая стоимость:</p><p class="price">0 отг. к.</p>
+      <p>Стоимость доставки:</p><p class="price">0 отг. к.</p>
+    </div>
+
+     <div class="total-cost">
+       <p>Итого:</p><p class="price">0 отг. к.</p>
+     </div>
+  </div>
+  <div class="makeAnOrder">
+    <button>Оформить заказ</button>
+  </div>
+</div>
+
 <script src="/public/app.js"></script>
