--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
   font-family: 'EB Garamond', serif;
   background: rgb(13, 13, 14);
   position: relative;
-  overflow: hidden; 
+  /* overflow: hidden;  */
   overflow-y: scroll;
 }
 
@@ -567,6 +567,18 @@ body {
 .product-section .product-info .product-size .product-size-btn:hover {
   background-color: #000;
   color: #fff;
+  font-weight: 700;
+}
+
+.product-size-btn-active {
+  margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  font-size: 15px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50px;
   font-weight: 700;
 }
 
