Add dynamic prices in order page + some new items

--- a/views/order-details.hbs
+++ b/views/order-details.hbs
@@ -58,35 +58,17 @@
       <h2>Ваш заказ</h2>
       <div class="order-products-section">
         <div class="order-products-list">
-          <div class="order-product-item">
-            <h3>Секира охотника</h3>
-            <p>Размер: <span>XS</span></p>
-            <p>Количество: <span>1</span></p>
-            <p class="p-price">1100 отг. к.</p>
-            <hr>
-          </div>
-          <div class="order-product-item">
-            <h3>Одеяние Обугленного Охотника</h3>
-            <p>Размер: <span>M</span></p>
-            <p>Количество: <span>10</span></p>
-            <p class="p-price">80000 отг. к.</p>
-            <hr>
-          </div>
-          <div class="order-product-item">
-            <h3>Серый Волчий Колпак</h3>
-            <p>Размер: <span>3XL</span></p>
-            <p>Количество: <span>5</span></p>
-            <p class="p-price">10000 отг. к.</p>
-            <hr>
-          </div>        
         </div>
         <div class="order-products-cost">
-          <p>Общая стоимость: <span>2700 отг. к.</span></p>
-          <p>Стоимость доставки: <span>1000 отг. к.</span></p>
+          <p>Общая стоимость:</p>
+          <p class="price order-total-price"></p>
+          <p>Стоимость доставки:</p>
+          <p class="price order-delivery-price"></p>
         </div>
       </div>
-      <div class="order-total-cost">
-        <p>Итого к оплате: <span>3800 отг. к.</span></p>
+      <div class="total-cost">
+        <p>Итого к оплате:</p>
+        <p class="price order-total-cost"></p>
       </div>  
     </div>
   </div>
