--- a/public/css/pages/order-details.css
+++ b/public/css/pages/order-details.css
@@ -30,7 +30,7 @@
   margin-top: 50px;
   display: flex;
   flex-wrap: wrap-reverse;
-  justify-content: space-between;
+  justify-content: center;
   text-align: left;
 }
 
@@ -42,6 +42,7 @@
 
 .order-details .order-section .delivery-info {
   /* border: 1px solid green; */
+  padding-right: 30px;
   width: 60%;
 }
 
@@ -165,38 +166,42 @@
 }
 
 .order-details .order-info .order-products-section .order-products-cost {
-  /* border: 1px solid red; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.order-details .order-info .total-cost {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  border-bottom: 2px solid rgb(150, 150, 150);
+  padding-bottom: 30px;
 }
 
 .order-details .order-info .order-products-section .order-products-cost p {
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 15px;
   color: rgb(150, 150, 150);
   letter-spacing: 1px;
 }
 
-.order-details .order-info .order-products-section .order-products-cost span {
-  margin-top: 10px;
-  font-weight: 600;
-  font-size: 17px;
-  color: #000;
-}
-
-.order-details .order-info .order-total-cost {
-  border-bottom: 1px solid rgb(150, 150, 150);
-  margin-top: 30px;
-  margin-bottom: 50px;
-  padding-bottom: 50px;
-  text-align: center;
+.order-details .order-info .order-products-section .order-products-cost .price {
   font-size: 20px;
+  font-weight: 700;
+  color: black;
 }
 
-.order-details .order-info .order-total-cost p {
+.order-details .order-info .total-cost p {
+  font-size: 20px;
   color: rgb(150, 150, 150);
-  letter-spacing: 1px;
-  font-weight: 600;
+  margin-left: 30px;
 }
 
-.order-details .order-info .order-total-cost span {
-  color: #000;
+.order-details .order-info .total-cost .price {
+  font-size: 20px;
+  font-weight: 700;
+  color: black;
+  letter-spacing: 1px;
 }
