Resolved modal Cart open/closed problem

--- a/public/css/modals/cart-modal.css
+++ b/public/css/modals/cart-modal.css
@@ -1,9 +1,9 @@
 /* modals */
 
-input[type='checkbox']
+/* input[type='checkbox']
 {
   display: none;
-}
+} */
 
 .cart-modal {
   box-sizing: border-box;
